# IQFileConverter

./: .gitignore  CMakeLists.txt  IQFileConverter.pro  README.md  common.pri  gnss_sdr_metadata.pri
src/: CMakeLists.txt  gnss_sdr_metadata_wrapper.cpp  gnss_sdr_metadata_wrapper.h  gnss_sdr_post_include.h  gnss_sdr_pre_include.h  iq_file_converter.cpp  iq_file_converter.h  main.cpp  src.pro
test/: CMakeLists.txt  iq_file_converter_test.cpp  iq_file_converter_test.h  test.pro
